# sale-workflow

./: README.md
allow_price_update_on_locked_so/: README.rst  __manifest__.py
allow_price_update_on_locked_so/models/: sale_order_line.py
allow_price_update_on_locked_so/readme/: CONTRIBUTORS.rst  DESCRIPTION.rst  USAGE.rst
allow_price_update_on_locked_so/security/: res_groups.xml
allow_price_update_on_locked_so/tests/: __init__.py  test_price_update_on_locked_so.py
allow_price_update_on_locked_so/views/: sale_order_views.xml
sale_automatic_workflow/: README.rst  __manifest__.py
sale_automatic_workflow/data/: automatic_workflow_data.xml
sale_automatic_workflow/i18n/: am.po  ar.po  bg.po  bs.po  ca.po  ca_ES.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  et.po  (+59 more)
sale_automatic_workflow_stock/: README.rst  __manifest__.py
sale_cancel_reason/: README.rst  __manifest__.py
sale_commercial_partner/: README.rst  __manifest__.py
sale_exception/: README.rst
sale_force_invoiced/: README.rst  __manifest__.py
sale_order_disable_user_autosubscribe/: README.rst  __manifest__.py
sale_order_general_discount/: README.rst
sale_order_line_menu/: README.rst  __manifest__.py
sale_order_line_note/: README.rst  __manifest__.py
sale_order_type/: README.rst
sale_procurement_group_by_line/: README.rst  __manifest__.py
sale_quotation_number/: README.rst  __manifest__.py
sale_sourced_by_line/: README.rst  __manifest__.py
sale_stock_line_customer_ref/: README.rst  __manifest__.py  hooks.py
sale_substate/: README.rst
setup/_metapackage/: pyproject.toml
(+194 files in other folders)
