[project]
name = "odoo-addons-oca-sale-workflow"
version = "18.0.20250101.0"
dependencies = [
    "odoo-addon-sale_commercial_partner==18.0.*",
    "odoo-addon-sale_force_invoiced==18.0.*",
    "odoo-addon-sale_order_type==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
