[project]
name = "odoo-addons-oca-sale-workflow"
version = "18.0.20250128.0"
dependencies = [
    "odoo-addon-sale_automatic_workflow==18.0.*",
    "odoo-addon-sale_automatic_workflow_stock==18.0.*",
    "odoo-addon-sale_cancel_reason==18.0.*",
    "odoo-addon-sale_commercial_partner==18.0.*",
    "odoo-addon-sale_exception==18.0.*",
    "odoo-addon-sale_force_invoiced==18.0.*",
    "odoo-addon-sale_order_type==18.0.*",
    "odoo-addon-sale_procurement_group_by_line==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
